fix(pattern): Adjust spacing in and between columns in the `sidebar with navigation` pattern Fixes #319

--- a/src/scss/block-patterns/_sidebar-with-navigation.scss
+++ b/src/scss/block-patterns/_sidebar-with-navigation.scss
@@ -2,6 +2,7 @@
 
 .ucsc__sidebar-with-navigation {
 	flex-direction: column-reverse;
+	gap: var(--wp--preset--spacing--40);
 
 	@include media-query($wp-columns-unstack) {
 		flex-direction: row;
